--- a/index.html
+++ b/index.html
@@ -12,6 +12,16 @@
   </style>
 </head>
 <body>
-<p class="p1"><span class="s1"><b>Secret value is 1479832</b></span></p>
+<p class="p1"><span class="s1"><b>&lt;html&gt;</b></span></p>
+<p class="p1"><span class="s1"><b><span class="Apple-converted-space">    </span>&lt;head&gt;</b></span></p>
+<p class="p1"><span class="s1"><b><span class="Apple-converted-space">        </span>&lt;title&gt;Basics of HTML demo&lt;/title&gt;</b></span></p>
+<p class="p1"><span class="s1"><b><span class="Apple-converted-space">    </span>&lt;/head&gt;</b></span></p>
+<p class="p1"><span class="s1"><b><span class="Apple-converted-space">    </span>&lt;body&gt;</b></span></p>
+<p class="p1"><span class="s1"><b><span class="Apple-converted-space">        </span>&lt;p&gt;Secret value is &lt;b&gt;314159&lt;/b&gt;.&lt;/p&gt;</b></span></p>
+<p class="p1"><span class="s1"><b><span class="Apple-converted-space">        </span>&lt;p&gt;Read more at</b></span></p>
+<p class="p1"><span class="s1"><b><span class="Apple-converted-space">            </span>&lt;a href="http://www.codeabbey.com/index/task_view/basics-of-html"&gt;this task&lt;/a&gt;.</b></span></p>
+<p class="p1"><span class="s1"><b><span class="Apple-converted-space">        </span>&lt;/p&gt;</b></span></p>
+<p class="p1"><span class="s1"><b><span class="Apple-converted-space">    </span>&lt;/body&gt;</b></span></p>
+<p class="p1"><span class="s1"><b>&lt;/html&gt;Secret value is 1479832</b></span></p>
 </body>
 </html>
